frontend/.deploy/k8s-resources/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: '#{kubernetesDeploymentName}#'
  namespace: '#{kubernetesNamespace}#'
  labels:
    app: '#{kubernetesDeploymentName}#'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: '#{kubernetesDeploymentName}#'  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: '#{kubernetesDeploymentName}#'
    spec:
        containers:
        - image: '#{containerRegistryHostname}#/#{imageName}#'
          imagePullPolicy: Always
          name: '#{kubernetesDeploymentName}#'
          ports:
          - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
              cpu: "20m"
            limits:
              memory: 512Mi
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: '#{basePath}#'
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 90
            timeoutSeconds: 2
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: '#{basePath}#'
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
        imagePullSecrets:
          - name: aksinnocvregistry
