frontend/.deploy/k8s-resources/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: '#{kubernetesDeploymentName}#'
  namespace: '#{kubernetesNamespace}#'
spec:
  ports:
  - port: 3000
  selector:
    app: '#{kubernetesDeploymentName}#'
  type: ClusterIP
